# osm-bike-route-planner

./: .gitignore  README.md
pre/: Cargo.toml
pre/src/: main.rs  srtm.rs
web/: Cargo.toml
web/src/: graph.rs  main.rs
web/static/: index.html  leaflet_script.js  models.js  style.css
