[package]
name = "osm-dijkstra-pre"
version = "1.0.0"
authors = ["Simon Matejetz <st117468@stud.uni-stuttgart.de>"]

include = [
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs"
]

[dependencies]
osmpbfreader = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2"
reqwest = { version = "0.10.0", features = ["blocking"] }
zip = "0.5.3"
