[package]
name = "osm-dijkstra-web"
version = "1.0.0"
authors = ["Simon Matejetz <st117468@stud.uni-stuttgart.de>"]

include = [
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "static/*.css",
  "static/*.html",
  "static/*.js"
]

[dependencies]
actix-files = "0.1.6"
actix-web = "1.0.8"
bincode = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
